# dots-and-boxes-hs-pl

./: .gitignore  README.md  docker-compose.yml  start.sh
docs/: dots_and_boxes_zahorui.pptx
frontend/: index.html
haskell-backend/: Dockerfile  Server.hs  dots-and-boxes.cabal
prolog-backend/: Dockerfile  cors-proxy.js  prolog-server.pl  start.sh
